Basic refactoring of existing code

--- a/src/MicroMap.Test/MicroMap.UnitTest.csproj
+++ b/src/MicroMap.Test/MicroMap.UnitTest.csproj
@@ -63,6 +63,7 @@
     <Compile Include="DatabaseContextTests.cs" />
     <Compile Include="DatabaseConnectionTests.cs" />
     <Compile Include="ExecutionKernelTests.cs" />
+    <Compile Include="Mapper\InstanceFactoryTests.cs" />
     <Compile Include="QueryCompilerTests.cs" />
     <Compile Include="QueryContextOfTTests.cs" />
     <Compile Include="QueryContextTests.cs" />
